<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <include layout="@layout/navigation_header"/>
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fitsSystemWindows="true"
        android:fillViewport="true">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/lightGray">
            <include layout="@layout/navigation_poster"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <LinearLayout
                    android:id="@+id/infoView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|center"
                    android:gravity="center|center"
                    android:orientation="horizontal"
                    android:layout_margin="10dp"
                    android:elevation="5dp"
                    android:padding="15dp"
                    android:background="@drawable/shape_low_radius">
                    <TextView
                        android:id="@+id/infoIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="info"
                        android:textSize="40sp"
                        android:layout_gravity="center|center"
                        android:gravity="center|center"
                        android:textColor="@color/black"
                        android:fontFamily="@font/telldusicons"/>
                    <TextView
                        android:id="@+id/infoText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:layout_marginLeft="15dp"
                        android:layout_gravity="left|center"
                        android:gravity="left|center"
                        android:textColor="@color/gray"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/screenCover"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/deviceText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:textSize="16sp"
                        android:textColor="@color/darkGray"
                        android:layout_marginTop="5dp"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="10dp">

                        <LinearLayout
                            android:layout_width="0dip"
                            android:layout_height="match_parent"
                            android:layout_weight="0.38"
                            android:background="@drawable/shape_left"
                            android:gravity="center">

                            <TextView
                                android:id="@+id/tvIcon1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:textColor="#FFFFFF"
                                android:textSize="50sp"
                                android:text="@string/device"
                                android:fontFamily="@font/telldusicons"/>

                        </LinearLayout>

                        <RelativeLayout
                            android:id="@+id/btSelectDevice"
                            android:layout_width="0dip"
                            android:layout_height="match_parent"
                            android:layout_weight="0.62"
                            android:background="@drawable/shape_right">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:padding="10dp"
                                android:layout_centerInParent="true">

                        <TextView
                                android:id="@+id/txtDeviceName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/reserved_widget_android_device_select"
                                android:textSize="25sp"
                                android:textColor="@color/themeDark"/>

                        <TextView
                                android:id="@+id/txtDeviceHint"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/reserved_widget_android_device_tap_change_device"
                                android:textSize="15sp"
                                android:textColor="@color/darkGray"/>


                            </LinearLayout>
                        </RelativeLayout>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/themeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:textSize="16sp"
                        android:text="@string/reserved_widget_android_theme"
                        android:layout_marginBottom="10dp"
                        android:textColor="@color/darkGray"/>
                    <include
                        layout="@layout/theme_dim"/>

                    <TextView
                        android:id="@+id/rgb_control_options_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:textSize="16sp"
                        android:text="@string/reserved_widget_android_label_rgb_control_option"
                        android:layout_marginBottom="10dp"
                        android:textColor="@color/darkGray"
                        android:visibility="gone"/>
                    <include
                            layout="@layout/rgb_control_options"/>

                    <TextView
                        android:id="@+id/dim_slider_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="10dp"
                        android:textSize="16sp"
                        android:text="@string/reserved_widget_android_dimmingLevel"
                        android:layout_marginBottom="10dp"
                        android:textColor="@color/darkGray"
                        android:visibility="gone"/>
                    <include
                        layout="@layout/dim_slider"/>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="30dp"
                        android:gravity="center"
                        android:layout_gravity="center">

                        <Button
                            android:id="@+id/btAdd"
                            android:layout_width="220sp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:textColor="@color/white"
                            android:background="@drawable/blackbutton"
                            android:text="@string/reserved_widget_android_label_save"/>

                        <Button
                            android:id="@+id/btn_cancel"
                            android:layout_width="220sp"
                            android:layout_height="wrap_content"
                            android:paddingTop="10dp"
                            android:paddingBottom="10dp"
                            android:textColor="@color/white"
                            android:background="@drawable/redbutton"
                            android:text="@string/reserved_widget_android_dialogueBox_defaultNegativeText"/>

                    </LinearLayout>
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
