<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/blue">
                <LinearLayout
                        android:layout_width="140dp"
                        android:layout_height="20dp"
                        android:scaleType="centerInside"
                        android:orientation="horizontal"
                        android:layout_centerInParent="true">
                        <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/telldus_logo"/>
                </LinearLayout>
        </RelativeLayout>
        <ScrollView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:fitsSystemWindows="true"
                android:fillViewport="true">
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:background="@color/lightGray">
                        <RelativeLayout
                                android:layout_width="match_parent"
                                android:layout_height="140dp"
                                android:background="@drawable/telldushome">
                                <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:orientation="vertical"
                                        android:layout_centerVertical="true"
                                        android:gravity="right"
                                        android:layout_gravity="right"
                                        android:paddingRight="20dp">
                                        <TextView
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:text="@string/reserved_widget_android_purchase_error"
                                                android:textSize="33sp"
                                                android:layout_gravity="right"
                                                android:textColor="@color/white"/>
                                        <TextView
                                                android:id="@+id/posterTwo"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:layout_marginBottom="8dp"
                                                android:text="@string/reserved_widget_android_purchase_aborted"
                                                android:textSize="22sp"
                                                android:textColor="@color/white"
                                                android:layout_gravity="right"/>
                                </LinearLayout>
                        </RelativeLayout>
                        <com.google.android.flexbox.FlexboxLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                app:flexDirection="column"
                                android:background="@drawable/shape_low_radius"
                                android:elevation="2dp"
                                android:padding="15dp"
                                app:alignItems="center"
                                app:justifyContent="center"
                                android:layout_marginLeft="10dp"
                                android:layout_marginRight="10dp"
                                android:layout_marginTop="15dp">
                                <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="info"
                                        android:textSize="38sp"
                                        android:textColor="@color/brightRed"
                                        android:fontFamily="@font/telldusicons"/>
                                <TextView
                                        android:id="@+id/header"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/reserved_widget_android_purchase_error"
                                        android:textSize="24sp"
                                        android:layout_marginTop="10dp"
                                        android:textColor="@color/blackLight"/>
                                <TextView
                                        android:id="@+id/info"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/reserved_widget_android_purchase_error_info"
                                        android:textSize="14sp"
                                        android:layout_marginTop="10dp"
                                        android:layout_marginBottom="15dp"
                                        android:layout_marginLeft="5dp"
                                        android:textColor="@color/darkGray"/>
                                <com.google.android.flexbox.FlexboxLayout
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        app:flexDirection="column"
                                        app:alignItems="flex_start"
                                        app:justifyContent="center">
                                </com.google.android.flexbox.FlexboxLayout>
                                <Button
                                        android:id="@+id/btnRetry"
                                        android:layout_width="180sp"
                                        android:layout_height="wrap_content"
                                        android:layout_marginBottom="10dp"
                                        android:layout_marginTop="20dp"
                                        android:paddingTop="10dp"
                                        android:paddingBottom="10dp"
                                        android:textColor="@color/white"
                                        android:background="@drawable/orangebutton"
                                        android:text="@string/reserved_widget_android_error_tryAgain"/>
                                <Button
                                        android:id="@+id/btnCancel"
                                        android:layout_width="180sp"
                                        android:layout_height="wrap_content"
                                        android:layout_marginBottom="10dp"
                                        android:paddingTop="10dp"
                                        android:paddingBottom="10dp"
                                        android:textColor="@color/white"
                                        android:background="@drawable/orangebutton"
                                        android:text="@string/reserved_widget_android_dialogueBox_defaultNegativeText"/>
                        </com.google.android.flexbox.FlexboxLayout>
                </LinearLayout>
        </ScrollView>
    </LinearLayout>